# bricksafe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/bricksafe/: __init__.py  artifact.py  backup.py  devices.py  engine.py  gate.py
tests/: test_bricksafe.py
