[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bricksafe"
version = "0.1.0"
description = "Never brick a device — safe-by-construction firmware writes (backup-gate, placeholder guard, CAS, confirm-readback, undo)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michael", email = "convenientlymike@gmail.com" }]
keywords = ["firmware", "flashing", "hardware", "embedded", "fpga", "mcu", "safety", "control-plane", "iot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: System :: Hardware",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/convenientlymike/bricksafe"
Repository = "https://github.com/convenientlymike/bricksafe"
Issues = "https://github.com/convenientlymike/bricksafe/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[tool.hatch.build.targets.wheel]
packages = ["src/bricksafe"]

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]